add component set-title

--- a/src/app/components/devs/devs.component.html
+++ b/src/app/components/devs/devs.component.html
@@ -1,3 +1,11 @@
-<p>devs works!</p>
-<!-- <button class="btn btn-primary">Primary</button>
-<button class="btn btn-secondary">Secondary</button> -->
+<div class="page d-flex justify-content-center">
+  <div class="container-small d-flex justify-content-center">
+    <div class="d-flex flex-column">
+      <app-header></app-header>
+
+      <div class="submenu">
+        <a routerLink="/devs/set-title">Set Title</a>
+      </div>
+    </div>
+  </div>
+</div>
