--- a/src/app/components/devs/devs.component.css
+++ b/src/app/components/devs/devs.component.css
@@ -1,7 +1,3 @@
-.page {
-  background-color: bisque;
-}
-
 a {
   text-decoration: none;
   color: black;
@@ -10,6 +6,7 @@ a {
 .submenu :hover {
   color: blue;
   background-color: yellow;
+  cursor: pointer;
 }
 
 .container-small {
