--- a/src/app/components/devs/devs.component.html
+++ b/src/app/components/devs/devs.component.html
@@ -1,10 +1,19 @@
-<div class="page d-flex justify-content-center">
+<div class="d-flex justify-content-center">
   <div class="container-small d-flex justify-content-center">
     <div class="d-flex flex-column">
       <app-header></app-header>
 
       <div class="submenu">
-        <a routerLink="/devs/set-title">Set Title</a>
+        <ng-container *ngIf="subMenus && subMenus.length > 0; else noItems">
+          <ng-container *ngFor="let item of subMenus">
+            <div>
+              <a [routerLink]="item.link">{{ item.text }}</a>
+            </div>
+          </ng-container>
+        </ng-container>
+        <ng-template #noItems>
+          NO ITEMS!!
+        </ng-template>
       </div>
     </div>
   </div>
