--- a/src/app/components/devs/devs.component.css
+++ b/src/app/components/devs/devs.component.css
@@ -13,3 +13,14 @@ a {
   width: 720px;
   height: 100vh;
 }
+
+
+body {
+  font-family: "Poppins", sans-serif;
+  background: radial-gradient(circle at top left, #181023, #0b0519);
+  color: #c3b3d8;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
