--- a/src/app/components/devs/devs.component.html
+++ b/src/app/components/devs/devs.component.html
@@ -2,7 +2,22 @@
   <div class="container-small d-flex justify-content-center">
     <div class="d-flex flex-column">
       <app-header></app-header>
-      <div>test</div>
+
+      <h3>projects</h3>
+      <div class="submenu">
+        @for (item of getProject(); track item.text) {
+          <div>
+            <a [routerLink]="item.link">{{ item.text }}</a>
+          </div>
+        }
+        @empty {
+          NO ITEMS!!
+        }
+      </div>
+
+      <br/>
+
+      <h3>test</h3>
       <div class="submenu">
         @for (item of getSubMenu(); track item.text) {
           <div>
