--- a/src/app/components/devs/devs.component.html
+++ b/src/app/components/devs/devs.component.html
@@ -5,7 +5,7 @@
 
       <h3>projects</h3>
       <div class="submenu">
-        @for (item of getProject(); track item.text) {
+        @for (item of project(); track item.text) {
           <div>
             <a [routerLink]="item.link">{{ item.text }}</a>
           </div>
@@ -19,7 +19,7 @@
 
       <h3>test</h3>
       <div class="submenu">
-        @for (item of getSubMenu(); track item.text) {
+        @for (item of subMenu(); track item.text) {
           <div>
             <a [routerLink]="item.link">{{ item.text }}</a>
           </div>
