--- a/src/app/components/devs/pokemon-list/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/devs/pokemon-list/pokemon-card/pokemon-card.component.html
@@ -1,11 +1,16 @@
 @if (pokemonDetail()?.sprites?.back_default) {
-  <div>
-    <img [src]="pokemonDetail()?.sprites?.back_default" alt="user" />
-  </div>}
-@else {
+  <div class="card" style="width: 10rem;height: 20rem;">
+    <img [src]="pokemonDetail()?.sprites?.back_default" class="card-img" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{ pokemon().name}}</h5>
+      <p class="card-text">{{ pokemon().name}} desc.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+}
+@else
+{
   <div class="spinner-grow" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 }
-
-<a [routerLink]="pokemon().url">{{ pokemon().name }}</a>
