--- a/src/app/components/devs/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/devs/pokemon-list/pokemon-list.component.html
@@ -1,8 +1,12 @@
-
-<div class="d-flex flex-row flex-wrap justify-content-between">
-  @for(pokemon of pokemonList(); track pokemon.name) {
-    <div class="col-4">
-      <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
-    </div>
-  }
+<div class="d-flex flex-row">
+  <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark">
+    <app-pokemon-menu></app-pokemon-menu>
+  </div>
+  <div class="d-flex flex-row flex-wrap justify-content-between">
+    @for(pokemon of pokemonList(); track pokemon.name) {
+      <div class="col-4">
+        <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
+      </div>
+    }
+  </div>
 </div>
