--- a/src/app/components/shared/sidebars/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/sidebars/pokemon-menu/pokemon-menu.component.html
@@ -1,9 +1,65 @@
-<a routerLink="/devs/pokemon" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="32" fill="currentColor" class="bi bi-bootstrap-fill" viewBox="0 0 16 16">
-    <path d="M6.375 7.125V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23zm0 3.762h1.898c1.184 0 1.81-.48 1.81-1.377 0-.885-.65-1.348-1.886-1.348H6.375z"></path>
-    <path d="M4.002 0a4 4 0 0 0-4 4v8a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4zm1.06 12V3.545h3.399c1.587 0 2.543.809 2.543 2.11 0 .884-.65 1.675-1.483 1.816v.1c1.143.117 1.904.931 1.904 2.033 0 1.488-1.084 2.396-2.888 2.396z"></path>
+<!-- logo -->
+<a
+  routerLink="/devs/pokemon"
+  class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="50"
+    height="32"
+    fill="currentColor"
+    class="bi bi-bootstrap-fill"
+    viewBox="0 0 16 16"
+  >
+    <path
+      d="M6.375 7.125V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23zm0 3.762h1.898c1.184 0 1.81-.48 1.81-1.377 0-.885-.65-1.348-1.886-1.348H6.375z"
+    ></path>
+    <path
+      d="M4.002 0a4 4 0 0 0-4 4v8a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4zm1.06 12V3.545h3.399c1.587 0 2.543.809 2.543 2.11 0 .884-.65 1.675-1.483 1.816v.1c1.143.117 1.904.931 1.904 2.033 0 1.488-1.084 2.396-2.888 2.396z"
+    ></path>
   </svg>
   <span class="fs-4">Pokemon Shop</span>
 </a>
 
-<hr>
+<!-- separator -->
+<hr />
+
+<!-- menu -->
+<ul class="nav nav-pills flex-column mb-auto">
+  <li class="nav-item">
+    <a href="#" class="nav-link active" aria-current="page">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#home"></use>
+      </svg>
+      Home
+    </a>
+  </li>
+  <li class="nav-item">
+    <a href="#" class="nav-link text-white">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#speedometer2"></use>
+      </svg>
+      Dashboard
+    </a>
+  </li>
+</ul>
+
+<!-- separator -->
+<hr />
+
+
+<!-- user -->
+<div class="dropdown">
+  <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+    <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+    <strong>mdo</strong>
+</a>
+  <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+    <li><a class="dropdown-item" href="#">New project...</a></li>
+    <li><a class="dropdown-item" href="#">Settings</a></li>
+    <li><a class="dropdown-item" href="#">Profile</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Sign out</a></li>
+  </ul>
+</div>
+<div class="b-example-divider"></div>
