--- a/src/app/components/shared/sidebars/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/sidebars/pokemon-menu/pokemon-menu.component.html
@@ -27,7 +27,7 @@
 <!-- menu -->
 <ul class="nav nav-pills flex-column mb-auto">
   <li class="nav-item">
-    <a href="#" class="nav-link active" aria-current="page">
+    <a routerLink="/devs/pokemon" class="nav-link active" aria-current="page">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#home"></use>
       </svg>
@@ -35,11 +35,11 @@
     </a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link text-white">
+    <a routerLink="/devs/pokemon/my-pokemon" class="nav-link text-white">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#speedometer2"></use>
       </svg>
-      Dashboard
+      My Pokemon
     </a>
   </li>
 </ul>
