--- a/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
@@ -27,7 +27,7 @@
 <!-- menu -->
 <ul class="nav nav-pills flex-column mb-auto">
   <li class="nav-item">
-    <a routerLink="/devs/pokemon" class="nav-link active" aria-current="page">
+    <a routerLink="/devs/pokemon" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link text-white" aria-current="page">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#home"></use>
       </svg>
@@ -35,7 +35,7 @@
     </a>
   </li>
   <li class="nav-item">
-    <a routerLink="/devs/pokemon/my-pokemon" class="nav-link text-white">
+    <a routerLink="/devs/pokemon/my-pokemon" routerLinkActive="active" class="nav-link text-white">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#speedometer2"></use>
       </svg>
