--- a/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
@@ -27,39 +27,69 @@
 <!-- menu -->
 <ul class="nav nav-pills flex-column mb-auto">
   <li class="nav-item">
-    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link text-white" aria-current="page">
+    <a
+      routerLink="/"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="nav-link text-white"
+      aria-current="page"
+    >
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#home"></use>
       </svg>
       Home
     </a>
   </li>
-  <li class="nav-item">
-    <a routerLink="/my-pokemon" routerLinkActive="active" class="nav-link text-white">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#speedometer2"></use>
-      </svg>
-      My Pokemon
-    </a>
-  </li>
+  @if (authFacade.isLogin() | async) {
+    <li class="nav-item">
+      <a
+        routerLink="/my-pokemon"
+        routerLinkActive="active"
+        class="nav-link text-white"
+      >
+        <svg class="bi me-2" width="16" height="16">
+          <use xlink:href="#speedometer2"></use>
+        </svg>
+        My Pokemon
+      </a>
+    </li>
+  }
 </ul>
 
 <!-- separator -->
 <hr />
 
-
 <!-- user -->
+@if ((authFacade.isLogin() | async) === false) {
+<button class="btn btn-success" (click)="open()">Modal</button>
+} @else {
 <div class="dropdown">
-  <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-    <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+  <a
+    href="#"
+    class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+    id="dropdownUser1"
+    data-bs-toggle="dropdown"
+    aria-expanded="false"
+  >
+    <img
+      src="https://github.com/mdo.png"
+      alt=""
+      width="32"
+      height="32"
+      class="rounded-circle me-2"
+    />
     <strong>mdo</strong>
-</a>
-  <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+  </a>
+  <ul
+    class="dropdown-menu dropdown-menu-dark text-small shadow"
+    aria-labelledby="dropdownUser1"
+  >
     <li><a class="dropdown-item" href="#">New project...</a></li>
     <li><a class="dropdown-item" href="#">Settings</a></li>
     <li><a class="dropdown-item" href="#">Profile</a></li>
-    <li><hr class="dropdown-divider"></li>
+    <li><hr class="dropdown-divider" /></li>
     <li><a class="dropdown-item" href="#">Sign out</a></li>
   </ul>
 </div>
 <div class="b-example-divider"></div>
+}
