--- a/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
@@ -64,7 +64,7 @@
       height="32"
       class="rounded-circle me-2"
     />
-    <strong>mdo</strong>
+    <strong>{{ authFacade.getUserInfo() | async }}</strong>
   </a>
   <ul
     class="dropdown-menu dropdown-menu-dark text-small shadow"
