add login with google oauth2 get cookie to angular

--- a/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
@@ -47,8 +47,9 @@
 
 <!-- user -->
 @if ((authFacade.isLogin() | async) === false) {
-<button class="btn btn-success" (click)="open()">Modal</button>
+  <button class="btn btn-success" (click)="open()">Modal</button>
 } @else {
+  <button class="btn btn-primary" (click)="logout()">logout</button>
 <div class="dropdown">
   <a
     href="#"
