--- a/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
+++ b/src/app/components/shared/pokemon-menu/pokemon-menu.component.html
@@ -47,7 +47,7 @@
 
 <!-- user -->
 @if ((authFacade.isLogin() | async) === false) {
-  <button class="btn btn-success" (click)="login()">Modal</button>
+  <button class="btn btn-success" (click)="login()">login</button>
 } @else {
   <button class="btn btn-primary" (click)="logout()">logout</button>
 <div class="dropdown">
@@ -65,7 +65,7 @@
       height="32"
       class="rounded-circle me-2"
     />
-    <strong>{{ authFacade.getUserInfo() | async }}</strong>
+    <strong>{{ userName() }}</strong>
   </a>
   <ul
     class="dropdown-menu dropdown-menu-dark text-small shadow"
